- Change FormRedux submit button position strategy from absolute to fixed; - Fix FormWidget fields page move up, move down and delete buttons focus layout; - Fix FormWidget Menu component alignment layout; - Fix FormWidget Fields page alignment layout; - Fix FormWidget Form page alignment layout and overflow auto layout; - Fix AutoFireFormPage overflow auto layout; - Fix FormWidget Report page alignment layout; - Add button no-focus layout into main.scss file.

--- a/app/scripts/Dashboard/Forms/scss/form-redux.scss
+++ b/app/scripts/Dashboard/Forms/scss/form-redux.scss
@@ -27,7 +27,7 @@
 
   &.btn-float {
     input[type="submit"] {
-      position: absolute;
+      position: fixed;
       top: 1.45rem;
       right: 2rem;
       width: inherit;
